--- a/src/components/UI/AboutIcons/AboutIcons.module.css
+++ b/src/components/UI/AboutIcons/AboutIcons.module.css
@@ -1,4 +1,22 @@
 .container {
   width: 100vw;
-  height: 100vh;
+  display: flex;
+  justify-content: center;
+  /* border: 1px solid red; */
+}
+
+.iconContainer {
+  /* margin-top: 8rem; */
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  /* border: 2px solid green; */
+}
+
+.item {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* border: 2px solid red; */
 }
