--- a/src/components/UI/SpeedDial/MenuDial.module.css
+++ b/src/components/UI/SpeedDial/MenuDial.module.css
@@ -1,7 +1,5 @@
 .container {
-  position: absolute;
-  /* height: 100vh;
-  width: 100vw; */
+  position: fixed;
   height: 10vh;
   width: 10vw;
   top: 0;
