--- a/src/components/component-pages/AboutPage.module.css
+++ b/src/components/component-pages/AboutPage.module.css
@@ -4,4 +4,8 @@
   background-color: #333;
   color: white;
   overflow: hidden;
+  /* border: 1px solid orange; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
