Finish downward slide transitions

--- a/src/components/Avatar/AvatarBackdrop.module.css
+++ b/src/components/Avatar/AvatarBackdrop.module.css
@@ -1,5 +1,6 @@
 .backdropContainer {
-  width: 100vw;
+  /* position: fixed;
+  width: 100vw; */
   height: 100vh;
   display: flex;
   justify-content: center;
