--- a/src/components/component-pages/HomePage.module.css
+++ b/src/components/component-pages/HomePage.module.css
@@ -1,18 +1,21 @@
-.homeContainer {
+.container {
   height: 100vh;
+  width: 100vw;
   background-image: url(../../assets/images/vscode_background.png);
   background-position: center;
   background-size: cover;
 }
 
-.bgOverlay {
-  z-index: 10;
+.container::before {
+  content: "";
   position: absolute;
-  height: 100vh;
-  width: 100vw;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background: rgba(21, 21, 21, 0.8);
 }
 
-.hidden {
-  display: none;
+.bgOverlay {
+  position: relative;
 }
