--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
+* {
+  box-sizing: border-box !important;
+}
+
 html,
 body {
   max-width: 100%;
   min-width: 300px;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 body {
