--- a/src/components/component-pages/WorkPage.module.css
+++ b/src/components/component-pages/WorkPage.module.css
@@ -2,6 +2,9 @@
   height: 100vh;
   width: 100vw;
   background-color: #0c0c0d;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .container h1 {
