--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -4,12 +4,7 @@
   margin: 0;
 }
 
-.homeContainer {
-  top: 0;
-  height: 100vh;
-  width: 100vw;
-}
-.aboutContainer {
+.pageContainer {
   position: absolute;
   top: 0;
   height: 100vh;
