--- a/src/components/UI/ProjectCards/ProjectCards.module.css
+++ b/src/components/UI/ProjectCards/ProjectCards.module.css
@@ -3,7 +3,7 @@
   padding: 0 1rem;
   height: 80vh;
   width: 100vw;
-  border: 1px solid white;
+  /* border: 1px solid white; */
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
