--- a/src/components/UI/ProjectCards/ProjectCards.module.css
+++ b/src/components/UI/ProjectCards/ProjectCards.module.css
@@ -1,10 +1,25 @@
 .container {
-  margin-top: 20vh;
   padding: 0 1rem;
-  height: 80vh;
   width: 100vw;
+  max-width: 1240px;
   /* border: 1px solid white; */
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
+  position: absolute;
+  top: 11rem;
+  /* overflow-y: scroll; */
+}
+
+@media screen and (max-width: 750px) {
+  .container {
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+}
+
+@media screen and (max-height: 750px) {
+  .container {
+    bottom: 0;
+  }
 }
