--- a/src/components/component-pages/WorkPage.module.css
+++ b/src/components/component-pages/WorkPage.module.css
@@ -1,13 +1,17 @@
 .container {
   height: 100vh;
   width: 100vw;
-  background-color: #0c0c0d;
+  background-color: #2a2a2a;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .container h1 {
+  position: absolute;
+  font-size: 48px;
+  top: 6rem;
+  font-family: Josefin Sans;
   margin: 0;
   color: white;
   text-align: center;
