--- a/src/components/UI/ProjectCards/ProjectCards.module.css
+++ b/src/components/UI/ProjectCards/ProjectCards.module.css
@@ -2,13 +2,11 @@
   padding: 0 1rem;
   width: 100vw;
   max-width: 1240px;
-  /* border: 1px solid white; */
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   position: absolute;
-  top: 11rem;
-  /* overflow-y: scroll; */
+  top: 10.5rem;
 }
 
 @media screen and (max-width: 750px) {
@@ -20,6 +18,6 @@
 
 @media screen and (max-height: 750px) {
   .container {
-    bottom: 0;
+    bottom: 0.5rem;
   }
 }
