--- a/src/components/UI/AboutIcons/AboutIcons.module.css
+++ b/src/components/UI/AboutIcons/AboutIcons.module.css
@@ -2,36 +2,58 @@
   width: 100vw;
   display: flex;
   justify-content: center;
-  /* border: 1px solid red; */
 }
 
 .iconContainer {
   width: 85%;
   display: flex;
   justify-content: space-between;
-  /* border: 2px solid green; */
 }
 
 .item {
-  width: 25%;
+  width: 24%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* border: 2px solid red; */
 }
-
+.faIcon {
+}
+.muiIcon {
+  padding: 0 !important;
+  margin: 0 !important;
+  font-size: 130px !important;
+}
 .item p {
   font-weight: 700;
   font-size: 16px;
   font-family: Josefin Sans;
+  text-align: center;
 }
 
 @media screen and (max-width: 600px) {
   .iconContainer {
     width: 98%;
-    /* height: 80%; */
   }
-  /* .item p {
-    font-size: 14px;
-  } */
+  .muiIcon {
+    font-size: 98px !important;
+  }
+  .container {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: 6rem;
+  }
+}
+@media screen and (max-width: 400px) {
+  .muiIcon {
+    font-size: 64px !important;
+  }
+  .container {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: 5rem;
+  }
 }
