--- a/src/components/UI/ProjectCards/ProjectCard.module.css
+++ b/src/components/UI/ProjectCards/ProjectCard.module.css
@@ -35,10 +35,11 @@
 
 .linkContainer {
   width: 100%;
-  height: 100%;
+  height: calc(100% - 1rem);
   display: flex;
   justify-content: space-around;
   align-items: center;
+  align-self: flex-end;
 }
 .iconBtn {
   background: transparent !important;
@@ -145,7 +146,7 @@
 @media screen and (max-width: 820px) {
   .projectCard {
     width: 340px;
-    height: 200px;
+    height: 220px;
   }
 }
 
