--- a/src/components/UI/ProjectCards/ProjectCard.module.css
+++ b/src/components/UI/ProjectCards/ProjectCard.module.css
@@ -1,7 +1,8 @@
 .projectCard {
   position: relative;
-  width: 440px;
-  height: 240px;
+  /* width: 440px; */
+  min-height: 240px;
+  /* height: 240px; */
   display: inline-block;
   margin: 0.5rem;
 }
@@ -17,6 +18,7 @@
   padding: 0 1rem 0.5rem;
   height: 12rem;
   z-index: 1;
+  background-color: #3a3a3a;
 }
 
 .links {
@@ -143,28 +145,22 @@
     margin: 0.5rem auto;
   }
 }
-@media screen and (max-width: 820px) {
-  .projectCard {
-    width: 340px;
-    height: 220px;
-  }
-}
 
 @media screen and (max-width: 750px) {
   .projectCard {
-    height: 180px;
+    /* height: 180px; */
   }
 }
 
 @media screen and (max-width: 600px) {
   .projectCard {
-    width: 310px;
+    /* width: 310px; */
   }
 }
 @media screen and (max-width: 500px) {
   .projectCard {
-    width: 290px;
-    height: 175px;
+    /* width: 290px;
+    height: 175px; */
   }
 }
 
