--- a/src/components/UI/ProjectCards/ProjectCards.module.css
+++ b/src/components/UI/ProjectCards/ProjectCards.module.css
@@ -1,9 +1,9 @@
 .scrollbar {
-  width: 65vw;
+  width: 90vw;
   height: 75vh;
   position: relative;
   top: 4rem;
-  background-color: #3a3a3a;
+  /* background-color: #3a3a3a; */
   border-radius: 5px;
 }
 
@@ -12,5 +12,43 @@
   max-width: 1240px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+@media screen and (max-width: 800px) {
+  .scrollbar {
+    width: 60vw;
+    background-color: #3a3a3a;
+  }
+}
+@media screen and (max-width: 750px) {
+  .scrollbar {
+    width: 65vw;
+    background-color: #3a3a3a;
+  }
+}
+@media screen and (max-width: 700px) {
+  .scrollbar {
+    width: 70vw;
+    background-color: #3a3a3a;
+  }
+}
+@media screen and (max-width: 600px) {
+  .scrollbar {
+    width: 75vw;
+  }
+}
+@media screen and (max-width: 500px) {
+  .scrollbar {
+    width: 80vw;
+  }
+}
+@media screen and (max-width: 400px) {
+  .scrollbar {
+    width: 98vw;
+  }
+  .container {
+    padding: 0 0.6rem;
+  }
 }
