Add drawing animation for icons

--- a/src/components/UI/ProjectCards/ProjectCard.module.css
+++ b/src/components/UI/ProjectCards/ProjectCard.module.css
@@ -1,6 +1,7 @@
 .projectCard {
   position: relative;
   width: 48%;
+  max-width: 420px;
   min-height: 220px;
   display: inline-block;
   margin: 0.5rem 0;
