--- a/src/components/UI/AboutIcons/AboutIcons.module.css
+++ b/src/components/UI/AboutIcons/AboutIcons.module.css
@@ -16,18 +16,43 @@
   flex-direction: column;
   align-items: center;
 }
-.faIcon {
-}
 .muiIcon {
   padding: 0 !important;
   margin: 0 !important;
   font-size: 130px !important;
+}
+.muiIcon path {
+  stroke-dasharray: 120;
+  stroke-dashoffset: 120;
+
+  stroke: #fff;
+  fill: transparent;
 }
 .item p {
   font-weight: 700;
   font-size: 16px;
   font-family: Josefin Sans;
   text-align: center;
+}
+
+/* SVG ANIMATIONS */
+.speedIcon path {
+  animation: draw 2s linear 1s forwards;
+}
+.graphIcon path {
+  animation: draw 2s linear 2s forwards;
+}
+.starIcon path {
+  animation: draw 2s linear forwards;
+}
+.heartIcon path {
+  animation: draw 2s linear 3s forwards;
+}
+
+@keyframes draw {
+  to {
+    stroke-dashoffset: 0;
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -37,6 +62,7 @@
   .muiIcon {
     font-size: 98px !important;
   }
+
   .container {
     width: 100vw;
     display: flex;
