--- a/src/components/UI/ProjectCards/ProjectCards.module.css
+++ b/src/components/UI/ProjectCards/ProjectCards.module.css
@@ -3,35 +3,42 @@
   height: 75vh;
   position: relative;
   top: 4rem;
-  /* background-color: #3a3a3a; */
   border-radius: 5px;
+  max-width: 900px;
 }
 
 .container {
   padding: 0 0.5rem;
-  max-width: 1240px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
+  /* border: 1px solid green; */
+  /* box-shadow: 0px 0px 15px 15px #000; */
+}
+
+.hidden {
+  display: none;
 }
 
 @media screen and (max-width: 800px) {
   .scrollbar {
     width: 60vw;
-    background-color: #3a3a3a;
+    box-shadow: 0px 2px 7px 0px #000;
+    max-width: 440px;
+    /* background-color: #3a3a3a; */
   }
 }
 @media screen and (max-width: 750px) {
   .scrollbar {
     width: 65vw;
-    background-color: #3a3a3a;
+    /* background-color: #3a3a3a; */
   }
 }
 @media screen and (max-width: 700px) {
   .scrollbar {
     width: 70vw;
-    background-color: #3a3a3a;
+    /* background-color: #3a3a3a; */
   }
 }
 @media screen and (max-width: 600px) {
