--- a/src/components/Avatar/MePixelized.module.css
+++ b/src/components/Avatar/MePixelized.module.css
@@ -12,10 +12,7 @@
   width: 100vw;
   display: flex;
   justify-content: center;
-  z-index: 1;
-}
-.container:hover {
-  cursor: pointer;
+  z-index: 20;
 }
 
 .meContainer {
@@ -26,22 +23,47 @@
   align-items: center;
   position: absolute;
   top: 5rem;
-  /* border: 3px solid black; */
   border-radius: 50%;
   z-index: 1;
   background: linear-gradient(
     #3f3f40 0%,
-    #262627 20%,
-    #19191a 65%,
+    #262627 10%,
+    #19191a 60%,
     #0c0c0d 100%
   );
+  /* animation: spin 1s forwards linear; */
+}
+.meContainer:hover {
+  cursor: pointer;
+}
+.lookRight {
+  animation: look-right 1s forwards linear;
+}
+.lookLeft {
+  animation: look-left 1s forwards linear;
+}
+@keyframes look-right {
+  0% {
+    transform: rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(-180deg);
+  }
+}
+@keyframes look-left {
+  0% {
+    transform: rotateY(-180deg);
+  }
+  100% {
+    transform: rotateY(0);
+  }
 }
 
 .meContainer::before {
   content: "";
   height: 190px;
   width: 190px;
-  background: linear-gradient(#333334 0%, #19191a 60%, #0c0c0d 100%);
+  background: linear-gradient(#262627 0%, #19191a 60%, #0c0c0d 100%);
   border-radius: 50%;
   filter: blur(18px);
 }
@@ -59,9 +81,9 @@
 } */
 
 .me {
-  /* border: 1px solid green; */
   position: relative;
   right: 85px;
+  top: 10px;
   height: 102px;
   width: 78px;
   display: flex;
@@ -88,8 +110,8 @@
     60px 72px #0051ba, 54px 66px #0051ba, 60px 66px #0051ba, 12px 78px #0051ba,
     18px 78px #0051ba, 24px 78px #0051ba, 48px 78px #0051ba, 60px 78px #0051ba,
     12px 84px #0051ba, 18px 84px #0051ba, 48px 84px #0051ba, 60px 84px #0051ba,
-    12px 24px #d0e4f8, 30px 24px #d0e4f8, 18px 18px #d0e4f8, 36px 24px #2080dc,
-    18px 24px #2080dc, 36px 78px #0051ba, 30px 78px #0051ba, 36px 84px #0051ba,
+    12px 24px #2080dc, 30px 24px #2080dc, 18px 18px #d0e4f8, 36px 24px #d0e4f8,
+    18px 24px #d0e4f8, 36px 78px #0051ba, 30px 78px #0051ba, 36px 84px #0051ba,
     24px 84px #0051ba, 42px 78px #0051ba, 42px 84px #0051ba, 30px 84px #0051ba,
     18px 48px #ebccab, 30px 48px #ebccab, 24px 48px #aa8866, 42px 48px #ebccab,
     12px 42px #ebccab, 12px 48px #ebccab, 30px 60px #0147a4, 36px 18px #d0e4f8,
