--- a/src/components/Content/HomeContent.module.css
+++ b/src/components/Content/HomeContent.module.css
@@ -1,8 +1,9 @@
 .container {
   /* border: 2px solid red; */
   position: absolute;
-  top: 50vh;
+  top: 40vh;
   width: 100%;
+  min-width: 300px;
   color: white;
   font-family: Josefin Sans;
   display: flex;
@@ -17,10 +18,16 @@
   width: 60%;
   font-family: Josefin Sans;
   font-weight: 400;
-  font-size: 64px;
+  font-size: 72px;
   margin: 1rem 0;
 }
 
+@media screen and (max-width: 1200px) {
+  .textSection {
+    font-size: 64px;
+    width: 60%;
+  }
+}
 @media screen and (max-width: 960px) {
   .textSection {
     font-size: 56px;
@@ -36,12 +43,18 @@
 @media screen and (max-width: 600px) {
   .textSection {
     font-size: 48px;
-    width: 80%;
+    width: 90%;
   }
 }
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 380px) {
   .textSection {
-    font-size: 36px;
+    font-size: 42px;
+    width: 96%;
+  }
+}
+@media screen and (max-width: 325px) and (max-height: 650px) {
+  .textSection {
+    font-size: 32px;
     width: 96%;
   }
   .container {
