Finish AboutPage text alignments

--- a/src/components/UI/AboutIcons/AboutText.module.css
+++ b/src/components/UI/AboutIcons/AboutText.module.css
@@ -7,28 +7,36 @@
 
 .textContainer {
   width: 85%;
-  height: 80%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  position: relative;
+  /* border: 1px solid green; */
 }
 .spacer {
   width: 5%;
+  height: 100%;
+  /* border: 1px solid red; */
 }
 .column {
   width: 50%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  height: 100%;
+  font-family: Josefin Sans;
+  /* border: 1px solid blue; */
 }
 
 .shortAbout {
-  font-size: 48px;
+  /* border: 1px solid orange; */
+  font-size: 38px;
   margin: 0;
   text-align: right;
+  position: relative;
 }
 
 .longAbout {
-  font-size: 20px;
+  /* border: 1px solid yellow; */
+  margin: 0;
+  font-size: 18px;
+  font-weight: 300;
 }
 
 @media screen and (max-width: 600px) {
@@ -66,6 +74,6 @@
     font-size: 30px;
   }
   .longAbout {
-    font-size: 16px;
+    font-size: 14px;
   }
 }
