--- a/src/components/UI/AboutIcons/AboutIcons.module.css
+++ b/src/components/UI/AboutIcons/AboutIcons.module.css
@@ -23,7 +23,10 @@
 }
 .muiIcon path {
   stroke-dasharray: 120;
-  stroke-dashoffset: 120;
+  stroke-dashoffset: 140;
+  stroke-width: 0.5px;
+  /* stroke-dasharray: 90;
+  stroke-dashoffset: 90; */
 
   stroke: #fff;
   fill: transparent;
@@ -47,13 +50,18 @@
 }
 .heartIcon path {
   animation: draw 2s linear 3s forwards;
+  /* animation: dash 2s linear 3s forwards; */
 }
 @keyframes draw {
   to {
     stroke-dashoffset: 0;
   }
 }
-
+@keyframes dash {
+  to {
+    stroke-dashoffset: 190;
+  }
+}
 @media screen and (max-width: 600px) {
   .iconContainer {
     width: 98%;
