Finish AboutPage media queries

--- a/src/components/component-pages/AboutPage.module.css
+++ b/src/components/component-pages/AboutPage.module.css
@@ -12,3 +12,10 @@
 .hidden {
   display: none;
 }
+
+@media screen and (max-width: 500px) {
+  .container {
+    justify-content: flex-start;
+    padding-top: 5.5rem;
+  }
+}
