--- a/src/components/UI/AboutIcons/AboutIcons.module.css
+++ b/src/components/UI/AboutIcons/AboutIcons.module.css
@@ -2,15 +2,19 @@
   width: 100vw;
   display: flex;
   justify-content: center;
+  /* align-items: flex-start; */
+  /* border: 1px solid red; */
 }
 
 .iconContainer {
-  width: 85%;
+  width: 80%;
   display: flex;
   justify-content: space-between;
+  /* border: 1px solid yellow; */
 }
 
 .item {
+  /* border: 1px solid green; */
   width: 24%;
   display: flex;
   flex-direction: column;
@@ -62,31 +66,35 @@
     stroke-dashoffset: 190;
   }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1200px) {
   .iconContainer {
-    width: 98%;
+    width: 85%;
+  }
+}
+@media screen and (max-width: 900px) {
+  .iconContainer {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 700px) {
+  .iconContainer {
+    width: 95%;
   }
   .muiIcon {
-    font-size: 98px !important;
+    font-size: 110px !important;
   }
-
-  .container {
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    top: 6rem;
+}
+@media screen and (max-width: 600px) {
+  .muiIcon {
+    font-size: 64px !important;
   }
 }
 @media screen and (max-width: 400px) {
   .muiIcon {
-    font-size: 64px !important;
+    font-size: 50px !important;
   }
-  .container {
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    top: 5rem;
+  .item p {
+    font-weight: 600;
+    font-size: 14px;
   }
 }
