--- a/src/components/UI/AboutIcons/AboutText.module.css
+++ b/src/components/UI/AboutIcons/AboutText.module.css
@@ -6,9 +6,9 @@
 }
 
 .textContainer {
-  width: 85%;
+  width: 80%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   position: relative;
   /* border: 1px solid green; */
 }
@@ -26,7 +26,7 @@
 
 .shortAbout {
   /* border: 1px solid orange; */
-  font-size: 38px;
+  font-size: 48px;
   margin: 0;
   text-align: right;
   position: relative;
@@ -35,38 +35,67 @@
 .longAbout {
   /* border: 1px solid yellow; */
   margin: 0;
-  font-size: 18px;
+  font-size: 24px;
   font-weight: 300;
+}
+
+@media screen and (max-width: 1200px) {
+  .textContainer {
+    width: 85%;
+  }
+}
+@media screen and (max-width: 900px) {
+  .textContainer {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 700px) {
+  .textContainer {
+    width: 98%;
+  }
 }
 
 @media screen and (max-width: 600px) {
   .textContainer {
     width: 95%;
   }
-  .container {
-    position: absolute;
-    top: 15rem;
+  .shortAbout {
+    font-size: 42px;
+  }
+  .longAbout {
+    font-size: 20px;
   }
 }
-@media screen and (max-width: 400px) {
+
+@media screen and (max-width: 500px) {
   .textContainer {
-    width: 98%;
+    flex-direction: column;
+    align-items: center;
+  }
+  .column {
+    width: 100%;
   }
   .shortAbout {
-    font-size: 40px;
+    font-size: 36px;
+    margin: 3rem 0 2rem;
   }
-
-  .longAbout {
-    font-size: 19px;
+  .container {
+    margin-top: 0;
+  }
+}
+@media screen and (max-width: 325px) and (max-height: 660px) {
+  .shortAbout {
+    font-size: 32px;
+    margin: 0.5rem 0;
   }
 }
 
-@media screen and (max-height: 740px) and (max-width: 420px) {
+/* @media screen and (max-height: 740px) and (max-width: 420px) {
   .shortAbout {
     font-size: 36px;
   }
-}
-@media screen and (max-height: 650px) and (max-width: 365px) {
+} */
+/* @media screen and (max-height: 650px) and (max-width: 365px) {
   .container {
     top: 12rem;
   }
@@ -76,4 +105,4 @@
   .longAbout {
     font-size: 14px;
   }
-}
+} */
