--- a/src/components/UI/Arrows/DownArrow.module.css
+++ b/src/components/UI/Arrows/DownArrow.module.css
@@ -24,6 +24,8 @@
   margin-bottom: 0.2rem;
   width: 100vw;
   text-align: center;
+  font-family: Open Sans;
+  font-size: 15px;
 }
 
 .iconBtnRoot {
