--- a/src/components/UI/Navbar/MenuDial.module.css
+++ b/src/components/UI/Navbar/MenuDial.module.css
@@ -63,7 +63,7 @@
   background-color: white !important;
 }
 .tooltipTitle {
-  font-family: Josefin Sans;
+  font-family: Open Sans;
   font-size: 20px;
   text-align: center;
   white-space: nowrap;
