--- a/src/components/UI/Navbar/MyName.module.css
+++ b/src/components/UI/Navbar/MyName.module.css
@@ -1,7 +1,7 @@
 .myName {
-  margin: 2rem 0 0 1rem;
+  margin: 1.5rem 0 0 1rem;
   color: white;
-  font-family: Josefin Sans;
+  font-family: Open Sans;
   font-size: 32px;
   z-index: 15;
 }
