--- a/src/components/UI/ProjectCards/ProjectCard.module.css
+++ b/src/components/UI/ProjectCards/ProjectCard.module.css
@@ -1,14 +1,16 @@
 .projectCard {
   position: relative;
   width: 48%;
-  max-width: 420px;
-  min-height: 220px;
+  max-width: 430px;
+  min-height: 240px;
   display: inline-block;
   margin: 0.5rem 0;
 }
 .projectCard:hover {
   cursor: pointer;
 }
+
+/* <400px - need github and project link displayed over image */
 
 .contentContainer {
   position: relative;
@@ -21,7 +23,7 @@
 }
 
 .links {
-  font-family: Josefin Sans;
+  font-family: Open Sans;
   color: #0c0c0d;
   width: 100%;
   height: 100%;
@@ -79,6 +81,8 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+  font-family: Open Sans;
+  font-size: 18px;
 }
 
 .hidden {
@@ -135,8 +139,18 @@
   }
 }
 
+@media screen and (max-width: 1000px) {
+  .projectCard {
+    min-height: 210px;
+  }
+}
 @media screen and (max-width: 800px) {
   .projectCard {
     width: 100%;
+  }
+}
+@media screen and (max-width: 400px) {
+  .projectCard {
+    margin: 0.25rem 0;
   }
 }
