--- a/src/components/UI/AboutIcons/AboutIcons.module.css
+++ b/src/components/UI/AboutIcons/AboutIcons.module.css
@@ -10,6 +10,7 @@
   width: 80%;
   display: flex;
   justify-content: space-between;
+  min-width: 280px;
   /* border: 1px solid yellow; */
 }
 
@@ -29,16 +30,14 @@
   stroke-dasharray: 120;
   stroke-dashoffset: 140;
   stroke-width: 0.5px;
-  /* stroke-dasharray: 90;
-  stroke-dashoffset: 90; */
 
   stroke: #fff;
   fill: transparent;
 }
 .item p {
-  font-weight: 700;
-  font-size: 16px;
-  font-family: Josefin Sans;
+  font-weight: 600;
+  font-size: 15px;
+  font-family: Open Sans;
   text-align: center;
 }
 
