--- a/src/components/UI/AboutIcons/AboutText.module.css
+++ b/src/components/UI/AboutIcons/AboutText.module.css
@@ -20,12 +20,14 @@
 .column {
   width: 50%;
   height: 100%;
-  font-family: Josefin Sans;
+
   /* border: 1px solid blue; */
 }
 
 .shortAbout {
   /* border: 1px solid orange; */
+  font-family: Montserrat;
+  font-weight: 600;
   font-size: 48px;
   margin: 0;
   text-align: right;
@@ -34,9 +36,10 @@
 
 .longAbout {
   /* border: 1px solid yellow; */
+  font-family: Open Sans;
   margin: 0;
-  font-size: 24px;
-  font-weight: 300;
+  font-size: 20px;
+  font-weight: 400;
 }
 
 @media screen and (max-width: 1200px) {
@@ -63,7 +66,7 @@
     font-size: 42px;
   }
   .longAbout {
-    font-size: 20px;
+    font-size: 18px;
   }
 }
 
@@ -79,30 +82,31 @@
     font-size: 36px;
     margin: 3rem 0 2rem;
   }
+  .longAbout {
+    font-size: 16px;
+  }
   .container {
     margin-top: 0;
   }
 }
-@media screen and (max-width: 325px) and (max-height: 660px) {
+@media screen and (max-width: 300px) {
   .shortAbout {
-    font-size: 32px;
+    font-size: 36px;
+    margin: 1rem 0;
+  }
+  .longAbout {
+    font-size: 16px;
+  }
+  .container {
+    margin-top: 0;
+  }
+}
+@media screen and (max-width: 360px) and (max-height: 660px) {
+  .longAbout {
+    font-size: 15px;
+  }
+  .shortAbout {
+    font-size: 28px;
     margin: 0.5rem 0;
   }
 }
-
-/* @media screen and (max-height: 740px) and (max-width: 420px) {
-  .shortAbout {
-    font-size: 36px;
-  }
-} */
-/* @media screen and (max-height: 650px) and (max-width: 365px) {
-  .container {
-    top: 12rem;
-  }
-  .shortAbout {
-    font-size: 30px;
-  }
-  .longAbout {
-    font-size: 14px;
-  }
-} */
