--- a/src/components/UI/ProjectCards/ProjectCardNav.module.css
+++ b/src/components/UI/ProjectCards/ProjectCardNav.module.css
@@ -7,6 +7,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 8;
 }
 
 .btnContainer {
@@ -34,7 +35,13 @@
 
 .header {
   font-size: 14px;
-  font-family: Josefin Sans;
+  font-family: Open Sans;
   width: 100%;
   text-align: center;
+}
+
+@media screen and (max-width: 500px) {
+  .header {
+    font-size: 12px;
+  }
 }
