--- a/src/components/component-pages/WorkPage.module.css
+++ b/src/components/component-pages/WorkPage.module.css
@@ -5,15 +5,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /* background: white; */
 }
 
 .container h1 {
   position: absolute;
   font-size: 48px;
-  top: 6rem;
-  font-family: Josefin Sans;
+  top: 5rem;
+  font-family: Montserrat;
   margin: 0;
   color: white;
   text-align: center;
+}
+
+@media screen and (max-width: 500px) {
+  .container h1 {
+    font-size: 40px;
+  }
 }
