--- a/src/components/UI/AboutIcons/AboutText.module.css
+++ b/src/components/UI/AboutIcons/AboutText.module.css
@@ -101,6 +101,15 @@
     margin-top: 0;
   }
 }
+@media screen and (max-width: 380px) and (max-height: 660px) {
+  .longAbout {
+    font-size: 16px;
+  }
+  .shortAbout {
+    font-size: 30px;
+    margin: 0.5rem 0;
+  }
+}
 @media screen and (max-width: 360px) and (max-height: 660px) {
   .longAbout {
     font-size: 15px;
