--- a/src/components/UI/Navbar/MenuDial.module.css
+++ b/src/components/UI/Navbar/MenuDial.module.css
@@ -5,7 +5,7 @@
 
 /* SPEED DIAL */
 .speedDial {
-  margin: 1.5rem 1.5rem 0 0;
+  margin: 1.5rem 1rem 0 0;
 }
 
 .fab {
@@ -68,4 +68,10 @@
   text-align: center;
   white-space: nowrap;
   margin: 0;
+}
+
+@media screen and (max-width: 400px) {
+  .speedDial {
+    margin: 0.5rem 0 0 0;
+  }
 }
