--- a/src/components/UI/Navbar/MyName.module.css
+++ b/src/components/UI/Navbar/MyName.module.css
@@ -8,7 +8,12 @@
 
 @media screen and (max-width: 600px) {
   .myName {
-    margin-left: 0.5rem;
+    margin: 1rem 0 0 0.5rem;
     font-size: 26px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .myName {
+    margin: 0.5rem 0 0 0.5rem;
   }
 }
