--- a/src/components/component-pages/HomePage.module.css
+++ b/src/components/component-pages/HomePage.module.css
@@ -1,6 +1,6 @@
 .container {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background-image: url(../../assets/images/vscode_background.png);
   background-position: center;
   background-size: cover;
