--- a/src/components/UI/Arrows/DownArrow.module.css
+++ b/src/components/UI/Arrows/DownArrow.module.css
@@ -26,7 +26,7 @@
   text-align: center;
   font-family: Open Sans;
   font-size: 14px;
-  border: 1px solid white !important;
+  /* border: 1px solid white !important; */
   z-index: 1;
 }
 
@@ -43,6 +43,14 @@
 @media screen and (max-width: 600px) {
   .arrowContainer {
     width: 50%;
+  }
+}
+
+@media screen and (orientation: landscape) and (max-width: 660px) and (max-height: 300px) {
+  .container {
+    height: 15vh !important;
+    bottom: 5rem !important;
+    border: 2px solid green !important;
   }
 }
 
