--- a/src/components/UI/Arrows/UpArrow.module.css
+++ b/src/components/UI/Arrows/UpArrow.module.css
@@ -1,15 +1,12 @@
-.container {
+/* .container {
   position: absolute;
   width: 100vw;
   height: 10vh;
   top: 1rem;
   display: flex;
   justify-content: center;
-}
-
-.lowered {
-  top: 1.5rem;
-}
+  z-index: 50;
+} */
 
 .arrowContainer {
   z-index: 20;
@@ -25,6 +22,7 @@
   color: white !important;
   width: 3.5rem;
   height: 3.5rem;
+  z-index: 2;
   /* border: 1px solid white !important; */
 }
 .iconBtnRoot:hover {
