--- a/src/components/Content/HomeContent.module.css
+++ b/src/components/Content/HomeContent.module.css
@@ -72,7 +72,7 @@
   }
 }
 
-@media screen and (orientation: landscape) and (max-width: 660px) and (max-height: 300px) {
+@media screen and (orientation: landscape) and (max-width: 660px) and (max-height: 320px) {
   .container {
     bottom: 1.1rem;
   }
@@ -82,3 +82,14 @@
     margin: 0;
   }
 }
+
+/* @media screen and (orientation: landscape) and (max-width: 570px) and (max-height: 330px) {
+  .container {
+    bottom: 1.1rem;
+  }
+  .textSection {
+    width: 96%;
+    font-size: 28px;
+    margin: 0;
+  }
+} */
