--- a/src/components/component-pages/AboutPage.module.css
+++ b/src/components/component-pages/AboutPage.module.css
@@ -3,10 +3,12 @@
   width: 100vw;
   background-color: #333;
   color: white;
-  overflow: hidden;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  /* overflow: hidden; */
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 .hidden {
