--- a/src/components/Avatar/MePixelized.module.css
+++ b/src/components/Avatar/MePixelized.module.css
@@ -21,7 +21,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: relative;
   top: 4rem;
   border-radius: 50%;
   z-index: 1;
@@ -65,18 +65,6 @@
     transform: rotateY(0);
   }
 }
-
-/* .meContainer::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 30px;
-  border-radius: 50%;
-  background: rgba(150, 150, 150, 0.6);
-  bottom: -30px;
-  z-index: -1;
-  filter: blur(10px);
-} */
 
 .me {
   position: relative;
