--- a/src/components/UI/AboutIcons/AboutIcons.module.css
+++ b/src/components/UI/AboutIcons/AboutIcons.module.css
@@ -97,3 +97,22 @@
     font-size: 14px;
   }
 }
+
+@media screen and (max-width: 825px) and (max-height: 390px) {
+  .muiIcon {
+    font-size: 60px !important;
+  }
+}
+@media screen and (max-width: 725px) and (max-height: 550px) {
+  .muiIcon {
+    font-size: 70px !important;
+  }
+}
+@media screen and (max-width: 660px) and (max-height: 290px) {
+  .muiIcon {
+    font-size: 45px !important;
+  }
+  .item p {
+    font-size: 14px;
+  }
+}
