--- a/src/components/UI/Navbar/MenuDial.module.css
+++ b/src/components/UI/Navbar/MenuDial.module.css
@@ -75,3 +75,9 @@
     margin: 0.5rem 0 0 0;
   }
 }
+
+@media screen and (max-width: 820px) and (max-height: 450px) {
+  .speedDial {
+    margin: 0.5rem 0.2rem 0 0;
+  }
+}
