--- a/src/components/UI/Navbar/MyName.module.css
+++ b/src/components/UI/Navbar/MyName.module.css
@@ -17,3 +17,9 @@
     margin: 0.5rem 0 0 0.5rem;
   }
 }
+
+@media screen and (max-width: 820px) and (max-height: 450px) {
+  .myName {
+    margin: 0 0 0 0.5rem;
+  }
+}
