--- a/src/components/UI/Wrapper.module.css
+++ b/src/components/UI/Wrapper.module.css
@@ -1,11 +1,16 @@
-.wrapperContainer {
-  /* overflow-y: auto; */
+.scrollbar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  /* height: 100%;
+  width: 100%; */
+  /* border: 3px solid red; */
+  overflow: hidden;
 }
 
-.scrollbar {
-  overflow-y: auto;
-  /* z-index: 1; */
-}
+/* .wrapperContainer { */
+/* overflow-y: auto; */
+/* } */
 
 .navbar {
   position: absolute;
