--- a/src/components/component-pages/AboutPage.module.css
+++ b/src/components/component-pages/AboutPage.module.css
@@ -7,8 +7,8 @@
   flex-direction: column;
   justify-content: center;
   /* overflow: hidden; */
-  overflow-x: hidden;
-  overflow-y: scroll;
+  /* overflow-x: hidden;
+  overflow-y: scroll; */
 }
 
 .hidden {
@@ -18,6 +18,6 @@
 @media screen and (max-width: 500px) {
   .container {
     justify-content: flex-start;
-    padding-top: 5.5rem;
+    padding-top: 4.5rem;
   }
 }
