--- a/src/components/component-pages/WorkPage.module.css
+++ b/src/components/component-pages/WorkPage.module.css
@@ -1,10 +1,16 @@
 .container {
-  height: 100vh;
-  width: 100vw;
+  /* height: 100vh;
+   PREV VALUES
+  width: 100vw; */
+
+  height: 100%;
+  width: 100%;
   background-color: #2a2a2a;
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
+  /* overflow-x: hidden;
+  overflow-y: hidden; */
 }
 
 .container h1 {
