--- a/src/components/component-pages/WorkPage.module.css
+++ b/src/components/component-pages/WorkPage.module.css
@@ -1,16 +1,9 @@
 .container {
-  /* height: 100vh;
-   PREV VALUES
-  width: 100vw; */
-
   height: 100%;
   width: 100%;
   background-color: #2a2a2a;
   display: flex;
   justify-content: center;
-  /* align-items: center; */
-  /* overflow-x: hidden;
-  overflow-y: hidden; */
 }
 
 .container h1 {
@@ -26,5 +19,11 @@
 @media screen and (max-width: 500px) {
   .container h1 {
     font-size: 40px;
+  }
+}
+@media screen and (max-width: 830px) and (max-height: 415px) {
+  .container h1 {
+    font-size: 30px;
+    top: 3rem;
   }
 }
